แก้ไข UI ระบบลงทะเบียนผู้ป่วย - close #117
