# backend/docs/swagger.yaml
@@ -71,10 +71,10 @@ definitions:
     type: object
   ent.BloodTypeEdges:
     properties:
-      patient:
-        description: Patient holds the value of the patient edge.
+      patientDetails:
+        description: PatientDetails holds the value of the patient_details edge.
         items:
-          $ref: '#/definitions/ent.Patient'
+          $ref: '#/definitions/ent.PatientDetail'
         type: array
     type: object
   ent.Department:
@@ -194,10 +194,10 @@ definitions:
     type: object
   ent.GenderEdges:
     properties:
-      patient:
-        description: Patient holds the value of the patient edge.
+      patientDetails:
+        description: PatientDetails holds the value of the patient_details edge.
         items:
-          $ref: '#/definitions/ent.Patient'
+          $ref: '#/definitions/ent.PatientDetail'
         type: array
     type: object
   ent.Hospital:
@@ -305,12 +305,6 @@ definitions:
     type: object
   ent.Patient:
     properties:
-      addedDate:
-        description: AddedDate holds the value of the "addedDate" field.
-        type: string
-      age:
-        description: Age holds the value of the "age" field.
-        type: integer
       drugAllergy:
         description: DrugAllergy holds the value of the "drugAllergy" field.
         type: string
@@ -329,11 +323,20 @@ definitions:
       patientName:
         description: PatientName holds the value of the "patientName" field.
         type: string
-      personalID:
-        description: PersonalID holds the value of the "personalID" field.
+    type: object
+  ent.PatientDetail:
+    properties:
+      edges:
+        $ref: '#/definitions/ent.PatientDetailEdges'
+        description: |-
+          Edges holds the relations/edges for other nodes in the graph.
+          The values are being populated by the PatientDetailQuery when eager-loading is set.
+        type: object
+      id:
+        description: ID of the ent.
         type: integer
     type: object
-  ent.PatientEdges:
+  ent.PatientDetailEdges:
     properties:
       bloodtype:
         $ref: '#/definitions/ent.BloodType'
@@ -343,6 +346,22 @@ definitions:
         $ref: '#/definitions/ent.Gender'
         description: Gender holds the value of the gender edge.
         type: object
+      patient:
+        $ref: '#/definitions/ent.Patient'
+        description: Patient holds the value of the patient edge.
+        type: object
+      prefix:
+        $ref: '#/definitions/ent.Prefix'
+        description: Prefix holds the value of the prefix edge.
+        type: object
+    type: object
+  ent.PatientEdges:
+    properties:
+      patientDetails:
+        description: PatientDetails holds the value of the patient_details edge.
+        items:
+          $ref: '#/definitions/ent.PatientDetail'
+        type: array
       patientToAppointmentResults:
         description: PatientToAppointmentResults holds the value of the PatientToAppointmentResults
           edge.
@@ -367,10 +386,6 @@ definitions:
         items:
           $ref: '#/definitions/ent.RightToTreatment'
         type: array
-      prefix:
-        $ref: '#/definitions/ent.Prefix'
-        description: Prefix holds the value of the prefix edge.
-        type: object
       triageResult:
         description: TriageResult holds the value of the triageResult edge.
         items:
@@ -394,10 +409,10 @@ definitions:
     type: object
   ent.PrefixEdges:
     properties:
-      patient:
-        description: Patient holds the value of the patient edge.
+      patientDetails:
+        description: PatientDetails holds the value of the patient_details edge.
         items:
-          $ref: '#/definitions/ent.Patient'
+          $ref: '#/definitions/ent.PatientDetail'
         type: array
     type: object
   ent.ProcedureType:
@@ -2205,6 +2220,157 @@ paths:
           schema:
             $ref: '#/definitions/gin.H'
       summary: Update a nurse entity by ID
+  /patient-details:
+    get:
+      description: list patient-detail entities
+      operationId: list-patient-detail
+      parameters:
+      - description: Limit
+        in: query
+        name: limit
+        type: integer
+      - description: Offset
+        in: query
+        name: offset
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/ent.PatientDetail'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/gin.H'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/gin.H'
+      summary: List patient-detail entities
+    post:
+      consumes:
+      - application/json
+      description: Create patient-detail
+      operationId: create-patient-detail
+      parameters:
+      - description: PatientDetail entity
+        in: body
+        name: patient-detail
+        required: true
+        schema:
+          $ref: '#/definitions/ent.PatientDetail'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/ent.PatientDetail'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/gin.H'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/gin.H'
+      summary: Create patient-detail
+  /patientdetails/{id}:
+    delete:
+      description: get patientdetail by ID
+      operationId: delete-patientdetail
+      parameters:
+      - description: PatientDetail ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/gin.H'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/gin.H'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/gin.H'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/gin.H'
+      summary: Delete a patientdetail entity by ID
+    get:
+      description: get patientdetail by ID
+      operationId: get-patientdetail
+      parameters:
+      - description: PatientDetail ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/ent.PatientDetail'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/gin.H'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/gin.H'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/gin.H'
+      summary: Get a patientdetail entity by ID
+    put:
+      consumes:
+      - application/json
+      description: update patientdetail by ID
+      operationId: update-patientdetail
+      parameters:
+      - description: PatientDetail ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: PatientDetail entity
+        in: body
+        name: patientdetail
+        required: true
+        schema:
+          $ref: '#/definitions/ent.PatientDetail'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/ent.PatientDetail'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/gin.H'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/gin.H'
+      summary: Update a patientdetail entity by ID
   /patients:
     get:
       description: list patient entities
@@ -2239,12 +2405,12 @@ paths:
     post:
       consumes:
       - application/json
-      description: Create Patient
-      operationId: create-Patient
+      description: Create patient
+      operationId: create-patient
       parameters:
       - description: Patient entity
         in: body
-        name: Patient
+        name: patient
         required: true
         schema:
           $ref: '#/definitions/ent.Patient'
@@ -2263,7 +2429,7 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/gin.H'
-      summary: Create Patient
+      summary: Create patient
   /patients/{id}:
     delete:
       description: get patient by ID
