# backend/ent/bloodtype.go
@@ -24,20 +24,20 @@ type BloodType struct {
 
 // BloodTypeEdges holds the relations/edges for other nodes in the graph.
 type BloodTypeEdges struct {
-	// Patient holds the value of the patient edge.
-	Patient []*Patient
+	// PatientDetails holds the value of the patient_details edge.
+	PatientDetails []*PatientDetail
 	// loadedTypes holds the information for reporting if a
 	// type was loaded (or requested) in eager-loading or not.
 	loadedTypes [1]bool
 }
 
-// PatientOrErr returns the Patient value or an error if the edge
+// PatientDetailsOrErr returns the PatientDetails value or an error if the edge
 // was not loaded in eager-loading.
-func (e BloodTypeEdges) PatientOrErr() ([]*Patient, error) {
+func (e BloodTypeEdges) PatientDetailsOrErr() ([]*PatientDetail, error) {
 	if e.loadedTypes[0] {
-		return e.Patient, nil
+		return e.PatientDetails, nil
 	}
-	return nil, &NotLoadedError{edge: "patient"}
+	return nil, &NotLoadedError{edge: "patient_details"}
 }
 
 // scanValues returns the types for scanning values from sql.Rows.
@@ -81,9 +81,9 @@ func (bt *BloodType) assignValues(columns []string, values []interface{}) error 
 	return nil
 }
 
-// QueryPatient queries the "patient" edge of the BloodType entity.
-func (bt *BloodType) QueryPatient() *PatientQuery {
-	return (&BloodTypeClient{config: bt.config}).QueryPatient(bt)
+// QueryPatientDetails queries the "patient_details" edge of the BloodType entity.
+func (bt *BloodType) QueryPatientDetails() *PatientDetailQuery {
+	return (&BloodTypeClient{config: bt.config}).QueryPatientDetails(bt)
 }
 
 // Update returns a builder for updating this BloodType.
