# backend/ent/schema/bloodtype.go
@@ -21,6 +21,6 @@ func (BloodType) Fields() []ent.Field {
 // Edges of the BloodType.
 func (BloodType) Edges() []ent.Edge {
 	return []ent.Edge{
-		edge.To("patient", Patient.Type),
+		edge.To("patient_details", PatientDetail.Type),
 	}
 }
